# crtpDemo

./: .travis.yml  CMakeLists.txt  CascadeSystem.h  CoutSystem.h  DrakeSystem.h  DrakeSystemDoubleView.h  Manipulator.h  Pendulum.h  QuadPlantPenn.h  README.txt  Readme.md  crtpDemo.cpp  drakeGeometryUtil.h  drakeGradientUtil.h
example/: CMakeLists.txt  CoutSystem.h  IntermediateTypeExample.h  Pendulum.h  QuadPlantPenn.h  crtpDemo.cpp
src/: CMakeLists.txt  DrakeSystem.h  Pendulum.h  crtpDemo.cpp
systems/: CascadeSystem.h  DrakeSystem.h  DrakeSystemDoubleView.h  DrakeSystemTypedefs.h
